--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.2",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "papaparse": "^5.5.3",
     "pg": "^8.16.3",
